# NoSQL-Project

./: README.md  package-lock.json
backend/: package-lock.json  package.json  server.js
backend/config/: .env
backend/controllers/: alternance.controller.js  authentification.controller.js  token.controller.js  users.controller.js
backend/middleware/: middleware.js
backend/models/: updatepin.modele.js  user.model.js
backend/routes/: alternance.route.js  authentification.route.js  token.routes.js  user.route.js
backend/utils/: catchError.js  hashCode.js  randomNumber.js  sendMail.js
front/: .env  README.md  pyproject.toml
front/front/: agregations.py  authentification.py  index old version.py  index.py  maps.py  maps2.py  region.py  test.py  test_geo.html  vars.py
front/front/js/: get_location.js
