[tool.poetry]
name = "front"
version = "0.1.0"
description = ""
authors = ["Snake <71287573+Nassim667@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
